Switch Statement: Switch Uses Strict Comparison

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <h1>Switch Statement</h1>
-    <button onclick="simpleSwitch();">Simple Switch Statement</button>
+    <button onclick="strictComparison();">Strict Comparison Switch Statement</button>
     <script src="script.js"></script>
   </body>
 </html>
