Switch Statement: Block-level Scope Issue with Switch Statements

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
   </head>
   <body>
     <h1>Switch Statement</h1>
-    <button onclick="strictComparison();">Strict Comparison Switch Statement</button>
+    <button onclick="blockScopeProblem();">Block Scope Problem</button>
+    <button onclick="blockScopeFix();">Block Scope Fix</button>
     <script src="script.js"></script>
   </body>
 </html>
