--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>JavaScript Syntax and Operators</h1>
+    <h1>Using a for-of Loop</h1>
+    <button onclick="forOfLoop();">Using a for-of Loop</button>
     <script src="script.js"></script>
   </body>
 </html>
