--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <h1>Using a for-of Loop</h1>
-    <button onclick="forOfLoop();">Using a for-of Loop</button>
+    <button onclick="loopString();">Looping over a string</button>
     <script src="script.js"></script>
   </body>
 </html>
