--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>Using Continue Statement</h1>
-    <button onclick="continueSample();">Break</button>
+    <h1>Using Labeled Statement</h1>
+    <button onclick="labeledStatement();">Labeled Statements</button>
     <script src="script.js"></script>
   </body>
 </html>
