Using Math and Comparison Operators - Mathematical Operators

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>JavaScript Syntax and Operators</h1>
+    <h1>Mathematical Operators</h1>
+    <button onclick="mathOperators();">Mathematical Operators</button>
     <script src="script.js"></script>
   </body>
 </html>
