Using Math and Comparison Operators - Comparison and Ternary Operators

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <h1>Mathematical Operators</h1>
-    <button onclick="assignmentOperators();">Assignment Operators</button>
+    <button onclick="comparisonOperators();">Comparison and Ternary Operators</button>
     <script src="script.js"></script>
   </body>
 </html>
