Logical Operators - Truthy and Falsy

--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>JavaScript Syntax and Operators</h1>
+    <h1>Working with Logical Operators and Short-circuit Evaluation</h1>
+
+    <button onclick="truthyFalsy();">Truthy and Falsy</button>
+
     <script src="script.js"></script>
   </body>
 </html>
