--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <h1>Working with Logical Operators and Short-circuit Evaluation</h1>
 
-    <button onclick="truthyFalsy();">Truthy and Falsy</button>
+    <button onclick="logicalOperators();">Logical Operators</button>
 
     <script src="script.js"></script>
   </body>
