Logical Operators - Short Circuiting

--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>Working with Logical Operators and Short-circuit Evaluation</h1>
+    <h1>Short Circuiting</h1>
 
-    <button onclick="logicalOperators();">Logical Operators</button>
+    <button onclick="shortCircuitingAnd();">Short Circuiting - AND</button>
+    <button onclick="shortCircuitingOr();">Short Circuiting - OR</button>
 
     <script src="script.js"></script>
   </body>
