Exception Handlinge - Throw a Custom Error Object

--- a/index.html
+++ b/index.html
@@ -9,9 +9,7 @@
   </head>
   <body>
     <h1>JavaScript Syntax and Operators</h1>
-    <button onclick="tryCatch();">Try, Catch</button>
-    <button onclick="finallyCatch();">Finally Statement with Catch Blocks</button>
-    <button onclick="finallySuccess();">Finally Statement with Catch Success</button>
+    <button onclick="throwError();">Throw a Custom Error Object</button>
     <script src="script.js"></script>
   </body>
 </html>
