Exception Handlinge - Detect the Error Type

--- a/index.html
+++ b/index.html
@@ -8,8 +8,12 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>JavaScript Syntax and Operators</h1>
-    <button onclick="throwError();">Throw a Custom Error Object</button>
-    <script src="script.js"></script>
+    <h1>JavaScript Syntax and Operators</h1>    
+    <div><button onclick="referenceError();">Check for error type - ReferenceError</button></div>
+    <div><button onclick="rangeError();">Check for error type - RangeError</button></div>
+    <div><button onclick="typeError();">Check for error type - TypeError</button></div>
+    <div><button onclick="uriError();">Check for error type - URIError</button></div>
+    <div><button onclick="syntaxError();">Check for error type - SyntaxError</button></div>
+  <script src="script.js"></script>
   </body>
 </html>
